[gd_scene load_steps=14 format=3 uid="uid://cgyulcoijx3v8"]

[ext_resource type="Shader" uid="uid://dnemn12b2kjd7" path="res://Portals/portal.tres" id="1_1hv46"]
[ext_resource type="Script" uid="uid://wj3l331jc5b" path="res://Portals/portal.gd" id="1_16n1h"]

[sub_resource type="ViewportTexture" id="ViewportTexture_16n1h"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Gradient" id="Gradient_16n1h"]
offsets = PackedFloat32Array(0.9116379, 0.95258623)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6lrts"]
gradient = SubResource("Gradient_16n1h")
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_jac53"]
offsets = PackedFloat32Array(0.8728448, 0.9137931, 0.9719828)
colors = PackedColorArray(0, 0, 0, 1, 0.67391306, 0.67391306, 0.67391306, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4865d"]
gradient = SubResource("Gradient_jac53")
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jac53"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_1hv46")
shader_parameter/Viewport = SubResource("ViewportTexture_16n1h")
shader_parameter/OutlineColor = Color(0.9505742, 0, 0.22290298, 1)
shader_parameter/tex_frg_7 = SubResource("GradientTexture2D_4865d")
shader_parameter/tex_frg_2 = SubResource("GradientTexture2D_6lrts")

[sub_resource type="QuadMesh" id="QuadMesh_qg0em"]
size = Vector2(1.1, 2.2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_16n1h"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_1hv46")
shader_parameter/OutlineColor = Color(0.9505742, 0, 0.22290298, 1)
shader_parameter/tex_frg_2 = SubResource("GradientTexture2D_6lrts")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_16n1h"]
resource_local_to_scene = true
no_depth_test = true

[sub_resource type="Curve" id="Curve_16n1h"]
_data = [Vector2(0, 0), 0.0, 6.322546, 0, 0, Vector2(0.14089347, 1), 5.110123, 0.0, 0, 0, Vector2(0.15463917, 0.23629236), 0.0, 0.0, 0, 0, Vector2(1, 0.23440665), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="TubeTrailMesh" id="TubeTrailMesh_6lrts"]
radius = 0.18
section_length = 1.235
curve = SubResource("Curve_16n1h")

[node name="Portal" type="Node3D"]
script = ExtResource("1_16n1h")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00896132)
sorting_offset = 50.0
material_override = SubResource("ShaderMaterial_jac53")
mesh = SubResource("QuadMesh_qg0em")

[node name="MeshInstance3DEmpty" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00896132)
visible = false
sorting_offset = 50.0
material_override = SubResource("ShaderMaterial_16n1h")
mesh = SubResource("QuadMesh_qg0em")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(256, 512)

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
size = 0.452

[node name="CamShow" type="MeshInstance3D" parent="SubViewport/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_16n1h")
mesh = SubResource("TubeTrailMesh_6lrts")

[node name="VirtualTransform" type="Node3D" parent="."]
